# ModShot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  Dockerfile-linux  Dockerfile-windows  LICENSE.steamshim.txt  README.md  conanfile.py  meson.build  meson_options.txt  mkxp.pro  modshot.conf.sample  oneshot.conf.sample  setup.sh  steam_appid.txt
.github/workflows/: build-debug.yaml  build-mys2.yml  build-mys2.yml.disabled  build-standalone-ubuntu.yml  build-standalone-windows.yml  build-standalone.yaml  build-standalone.yml  build-steam.yaml  build-ubuntu.yml  build-windows.yml  ci.yml  release.yml
assets/: AppRun  gamecontrollerdb.txt  meson.build  oneshot.desktop  resources.rc
binding-mri/: aleffect-binding.cpp  audio-binding.cpp  binding-mri-win32.h  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  chroma-binding.cpp  display-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  flashable-binding.h  font-binding.cpp  graphics-binding.cpp  input-binding.cpp  journal-binding.cpp  meson.build  modshot-binding.cpp  modshot-window-binding.cpp  module_rpg.cpp  module_rpg1.rb  module_rpg1.rb.xxd  niko-binding.cpp  oneshot-binding.cpp  otherview-binding.cpp  plane-binding.cpp  sceneelement-binding.h  screen-binding.cpp  serializable-binding.h  sprite-binding.cpp  steam-binding.cpp  system-binding.cpp  table-binding.cpp  tilemap-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  wallpaper-binding.cpp  window-binding.cpp
binding-null/: binding-null.cpp
chromasdk/: ChromaApi.h
journal/: journal.pro
journal/unix/: LICENSE  journal-linux.spec  journal.py  journal.spec  qt.conf
journal/w32/: .gitignore  journal.sln
journal/w32/journal/: journal.vcxproj  journal.vcxproj.filters
journal/w32/journal/src/: journal.c  resources.rc
linux/: .gitignore  Makefile  install.sh  meson.build  vars.sh
patches/mac/: CompleteBundle.cmake  CreateBundle.sh  Info.plist.in  JournalInfo.plist.in  oneshot.sh
patches/ruby/: static_zlib.patch
scripts/: CMakeLists.txt  Credits_Message.rb  Data_FastTravel.rb  Data_Footsteps.rb  Data_Item.rb  Data_SpecialEventData.rb  Demo.rb  Desktop_Message.rb  Doc_Message.rb  EdText.rb  Ed_Message.rb  FastTravel.rb  Game_Actor.rb  Game_BattleAction.rb  Game_Character_1.rb  Game_Character_2.rb  Game_Character_3.rb  Game_Event.rb  Game_FastTravel.rb  Game_Follower.rb  Game_Light.rb  Game_Map.rb  Game_Oneshot.rb  Game_Party.rb  Game_Picture.rb  Game_Player.rb  Game_SelfSwitches.rb  Game_Switches.rb  Game_System.rb  Game_Temp.rb  Interpreter_1.rb  Interpreter_3.rb  Interpreter_5.rb  Interpreter_6.rb  Interpreter_7.rb  Main.rb  Particles.rb  Persistent.rb  Puzzle_Film.rb  Puzzle_Pixel.rb  (+40 more)
scripts/ruby/: libraries.rb  mklang.rb  mklangsrc.rb  rpgscript.rb
scripts/shell/: build-entrypoint-linux.sh  build-entrypoint-windows.bat  cleanup.sh  install.command  make-appimage.sh  make-journal-linux.sh  make-linux-dist.sh  make-oneshot-linux.sh  make-oneshot-mac.command  oclint.sh
shader/: binary_glitch.frag  bitmapBlit.frag  blur.frag  blurH.vert  blurV.vert  chronos.frag  common.h  crt.frag  crt_sprite.frag  cubic_lens.frag  flashMap.frag  flatColor.frag  gray.frag  hue.frag  mask.frag  mask.vert  meson.build  minimal.vert  obscured.frag  simple.frag  simple.vert  simpleAlpha.frag  simpleAlphaUni.frag  simpleColor.frag  simpleColor.vert  simpleMatrix.vert  sprite.vert  tilemap.vert  trans.frag  transSimple.frag  water.frag  zoom.vert
src/: binding.h  boost-hash.h  config.cpp  config.h  crash-handler.cpp  crash-handler.h  debugwriter.h  display.cpp  display.h  etc-internal.h  etc.cpp  etc.h  eventthread.cpp  eventthread.h  exception.h  global-ibo.h  i18n.cpp  i18n.h  intrulist.h  mac-desktop.h  mac-desktop.mm  main.cpp  meson.build  oneshot.cpp  oneshot.h  otherview-message.cpp  otherview-message.cpp.old  otherview-message.h  otherview-message.h.old  pipe.h  serial-util.h  serializable.h  settingsmenu.cpp  settingsmenu.h  sharedstate.cpp  sharedstate.h  trstr.h  util.h  version.h  xdg-user-dir-lookup.c  (+1 more)
src/audio/headers/: al-util.h  aldatasource.h  alstream.h  audio.h  audiochannels.h  audiostream.h  soundemitter.h
src/audio/source/: alstream.cpp  audio.cpp  audiochannels.cpp  audiostream.cpp  sdlsoundsource.cpp  soundemitter.cpp  vorbissource.cpp
src/filesystem/headers/: filesystem.h  rgssad.h
src/filesystem/source/: filesystem.cpp  rgssad.cpp
src/graphics/headers/: bitmap.h  disposable.h  flashable.h  font.h  graphics.h  scene.h  sprite.h  tileatlas.h  tilemap-common.h  tilemap.h
src/graphics/source/: autotiles.cpp  bitmap.cpp  font.cpp  graphics.cpp  scene.cpp  sprite.cpp  tileatlas.cpp  tilemap.cpp
src/input/headers/: input.h  keybindings.h  settingsmenu.h
src/input/source/: input.cpp  keybindings.cpp
src/modshot/headers/: notifications.h
src/modshot/source/: crash-handler.cpp  notifications_unix.cpp  notifications_win32.cpp  otherview-message.cpp
src/oneshot/headers/: oneshot.h
src/oneshot/source/: i18n.cpp  oneshot.cpp
src/opengl/headers/: gl-debug.h  gl-fun.h  gl-meta.h  gl-util.h  glstate.h  plane.h  quad.h  quadarray.h  sdl-util.h  shader.h  table.h  texpool.h  tilequad.h  transform.h  vertex.h  viewport.h  window.h
src/opengl/source/: gl-debug.cpp  gl-fun.cpp  gl-meta.cpp  glstate.cpp  plane.cpp  screen.cpp  shader.cpp  table.cpp  texpool.cpp  tilequad.cpp  vertex.cpp  viewport.cpp  window.cpp
src/steam/: steam.cpp  steam.h
src/thread/headers/: eventthread.h  sharedstate.h
src/thread/source/: eventthread.cpp
src/util/headers/: config.h
src/util/source/: config.cpp
steamshim/: steamshim_child.c  steamshim_child.h
steamshim_parent/: CMakeLists.txt  README.md  resources.rc  steamshim_parent.cpp
windows/: .gitignore  Makefile  install.sh  manifest.xml  meson.build  resource.h  resource.rc  shim.c  vars.sh
xxd+/: main.cpp  xxd+.pro
